--- a/src/Shine.Domain/Shine.Domain.csproj
+++ b/src/Shine.Domain/Shine.Domain.csproj
@@ -8,4 +8,7 @@
     <ItemGroup>
         <PackageReference Include="Luck.DDD.Domain" Version="2.0.3" />
     </ItemGroup>
+    <ItemGroup>
+      <ProjectReference Include="..\Shine.Domain.Shared\Shine.Domain.Shared.csproj" />
+    </ItemGroup>
 </Project>
