feature : 添加Trace追踪的span对象

--- a/src/Shine.Domain/Shine.Domain.csproj
+++ b/src/Shine.Domain/Shine.Domain.csproj
@@ -11,4 +11,7 @@
     <ItemGroup>
       <ProjectReference Include="..\Shine.Domain.Shared\Shine.Domain.Shared.csproj" />
     </ItemGroup>
+    <ItemGroup>
+      <Folder Include="Repositories\" />
+    </ItemGroup>
 </Project>
