feature： 重命名部分文件，添加Otel的Trace接受服务Grpc协议

--- a/src/Shine.Receiver/Shine.Receiver.csproj
+++ b/src/Shine.Receiver/Shine.Receiver.csproj
@@ -11,4 +11,9 @@
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Shine.Domain\Shine.Domain.csproj" />
+      <ProjectReference Include="..\Shine.Protocol.Generated\Shine.Protocol.Generated.csproj" />
+    </ItemGroup>
+
 </Project>
