--- a/src/Shine.Persistence/Shine.Persistence.csproj
+++ b/src/Shine.Persistence/Shine.Persistence.csproj
@@ -12,5 +12,8 @@
     <ItemGroup>
       <ProjectReference Include="..\Shine.Domain\Shine.Domain.csproj" />
     </ItemGroup>
+    <ItemGroup>
+      <Folder Include="EntityFrameworkCore\" />
+    </ItemGroup>
 
 </Project>
