feature： 重构部分代码

--- a/src/Shine.Dto/Shine.Dto.csproj
+++ b/src/Shine.Dto/Shine.Dto.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Shine.Domain.Shared\Shine.Domain.Shared.csproj" />
+      <ProjectReference Include="..\Shine.Protocol.Generated\Shine.Protocol.Generated.csproj" />
     </ItemGroup>
 
 </Project>
