--- a/src/Shine.Domain/Shine.Domain.csproj
+++ b/src/Shine.Domain/Shine.Domain.csproj
@@ -6,6 +6,7 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
     <ItemGroup>
+        <PackageReference Include="Google.Protobuf" Version="3.27.1" />
         <PackageReference Include="Luck.DDD.Domain" Version="2.0.3" />
     </ItemGroup>
     <ItemGroup>
