feature： 完善grpc调通流程

--- a/src/Shine.Receiver/Properties/launchSettings.json
+++ b/src/Shine.Receiver/Properties/launchSettings.json
@@ -1,14 +1,22 @@
 ﻿{
   "profiles": {
-    "Shine.Receiver": {
-      "commandName": "Project",
-      "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:5099",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    }
+	"http": {
+	  "commandName": "Project",
+	  "dotnetRunMessages": true,
+	  "launchBrowser": false,
+	  "applicationUrl": "http://localhost:4317",
+	  "environmentVariables": {
+		"ASPNETCORE_ENVIRONMENT": "Development"
+	  }
+	},
+	"https": {
+	  "commandName": "Project",
+	  "dotnetRunMessages": true,
+	  "launchBrowser": false,
+	  "applicationUrl": "https://localhost:4319;http://localhost:4317",
+	  "environmentVariables": {
+		"ASPNETCORE_ENVIRONMENT": "Development"
+	  }
+	}
   }
 }
