--- a/src/Shine.Receiver/appsettings.json
+++ b/src/Shine.Receiver/appsettings.json
@@ -5,5 +5,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Kestrel": {
+	"EndpointDefaults": {
+	  "Protocols": "Http2"
+	},
+	"Endpoints": {
+	  "OTelGrpcEndpoint": {
+		"Url": "http://*:4317"
+	  }
+	}
+  }
 }
