feature： 晚上span的写到数据库，现在还有一个问题待解决，ef写入的时候有问题

--- a/src/Shine.Receiver/Shine.Receiver.csproj
+++ b/src/Shine.Receiver/Shine.Receiver.csproj
@@ -15,6 +15,8 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Shine.Domain\Shine.Domain.csproj" />
+      <ProjectReference Include="..\Shine.Infrastructure\Shine.Infrastructure.csproj" />
+      <ProjectReference Include="..\Shine.Persistence\Shine.Persistence.csproj" />
       <ProjectReference Include="..\Shine.Protocol.Generated\Shine.Protocol.Generated.csproj" />
     </ItemGroup>
 
