--- a/src/Shine.Query/Shine.Query.csproj
+++ b/src/Shine.Query/Shine.Query.csproj
@@ -4,10 +4,24 @@
         <TargetFramework>net8.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
+        <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Shine.Domain\Shine.Domain.csproj" />
+      <ProjectReference Include="..\Shine.Dto\Shine.Dto.csproj" />
+      <ProjectReference Include="..\Shine.Infrastructure\Shine.Infrastructure.csproj" />
+      <ProjectReference Include="..\Shine.Persistence\Shine.Persistence.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Content Include="..\..\.dockerignore">
+        <Link>.dockerignore</Link>
+      </Content>
     </ItemGroup>
 
 </Project>
