--- a/src/Shine.Query/appsettings.json
+++ b/src/Shine.Query/appsettings.json
@@ -1,9 +1,19 @@
 {
   "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+	"LogLevel": {
+	  "Default": "Information",
+	  "Microsoft.AspNetCore": "Warning"
+	}
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Kestrel": {
+	"Endpoints": {
+	  "JaegerQueryEndpoint": {
+		"Url": "http://*:5775"
+	  }
+	}
+  },
+  "ConnectionStrings": {
+	"EF": "User ID=postgres;Password=wzw0126..;Host=postgresql;Port=5432;Database=shine"
+  }
 }
