--- a/src/Shine.Receiver/appsettings.json
+++ b/src/Shine.Receiver/appsettings.json
@@ -15,5 +15,8 @@
 		"Url": "http://*:4317"
 	  }
 	}
+  },
+  "ConnectionStrings": {
+	"EF": "User ID=postgres;Password=wzw0126..;Host=postgresql;Port=5432;Database=shine"
   }
 }
