--- a/src/Shine.Query/appsettings.Development.json
+++ b/src/Shine.Query/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+	"EF": "User ID=postgres;Password=wzw0126..;Host=localhost;Port=5432;Database=shine"
   }
 }
